# telegram_bot_template

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.sh
config/: config.py
database/: db_operations.py  models.py
handlers/: __init__.py  base.py  channel_reader.py  onboarding.py  payments.py  profile.py  referral.py  subscription.py
keyboards/: keyboards.py
services/: logger.py  notifications.py  open_ai.py
tools/: db_viewer.py
